Translate researches_ja.yml via GitLocalize

--- a/src/main/resources/languages/researches_ja.yml
+++ b/src/main/resources/languages/researches_ja.yml
@@ -236,3 +236,7 @@ slimefun:
   advanced_industrial_miner: よりよい採掘
   magical_zombie_pills: ゾンビ化解除
   auto_brewer: 工業的醸造
+  enchantment_rune: 太古のエンチャント
+  lead_clothing: 鉛の布
+  tape_measure: テープメジャー
+  iron_golem_assembler: 人造アイアンゴーレム
