Translate researches_hu.yml via GitLocalize

--- a/src/main/resources/languages/researches_hu.yml
+++ b/src/main/resources/languages/researches_hu.yml
@@ -236,3 +236,7 @@ slimefun:
   advanced_industrial_miner: Jobb Bányászat
   magical_zombie_pills: Zombi Átváltoztató
   auto_brewer: Ipari Sörgyár
+  enchantment_rune: Ősi Varázslat
+  lead_clothing: Ólom Ruházat
+  tape_measure: Mérőszalag
+  iron_golem_assembler: Automatizált Vasgólemek
