Translate researches_zh-CN.yml via GitLocalize

--- a/src/main/resources/languages/researches_zh-CN.yml
+++ b/src/main/resources/languages/researches_zh-CN.yml
@@ -236,3 +236,7 @@ slimefun:
   advanced_industrial_miner: 进阶采矿
   magical_zombie_pills: 去僵尸化
   auto_brewer: 自动化酿造
+  enchantment_rune: 远古附魔法
+  lead_clothing: 强化布料
+  tape_measure: 卷尺
+  iron_golem_assembler: 自动化铁傀儡生产
