Translate messages_ru.yml via GitLocalize

--- a/src/main/resources/languages/messages_ru.yml
+++ b/src/main/resources/languages/messages_ru.yml
@@ -152,6 +152,15 @@ messages:
   - "&7Вы съели странное печенье, до жути напоминающее бисквит"
   - "&7Неоновые таблички просто ШИК!"
   piglin-barter: "&4Вы не можете торговать с пиглинами, используя Slimefun предметы"
+  enchantment-rune:
+    fail: "&cВы не можете зачаровать этот предмет."
+    no-enchantment: "&cНе удалось найти подходящее зачарование для этого предмета."
+    success: "&aВы успешно применили случайное зачарование к этому предмету."
+  tape-measure:
+    no-anchor: "&cВы должны установить якорь, прежде чем начать измерение!"
+    wrong-world: "&cВаш якорь находится в другом мире!"
+    distance: "&7Измерение завершено. &eРасстояние: %distance%"
+    anchor-set: "&aЯкорь успешно установлен:&e %anchor%"
 machines:
   pattern-not-found: "&eК сожалению, не удалось распознать этот рецепт. Пожалуйста,
     разложите предметы в верной последовательности в раздатчик."
@@ -294,7 +303,6 @@ languages:
   el: Греческий
   he: Иврит
   pt: Португальский (Португалия)
-  pt-BR: Португальский (Бразилия)
   ar: Арабский
   af: Бурский
   da: Датский
@@ -306,6 +314,7 @@ languages:
   fa: Персидский
   th: Тайский
   ro: Румынский
+  pt-BR: Португальский (Бразилия)
   bg: Болгарский
   ko: Корейский
   tr: Турецкий
