Translate researches_ru.yml via GitLocalize

--- a/src/main/resources/languages/researches_ru.yml
+++ b/src/main/resources/languages/researches_ru.yml
@@ -236,3 +236,7 @@ slimefun:
   advanced_industrial_miner: Улучшенная добыча
   magical_zombie_pills: Дезомбификация
   auto_brewer: Промышленная пивоварня
+  enchantment_rune: Древнее зачарование
+  lead_clothing: Свинцовое обмундирование
+  tape_measure: Рулетка
+  iron_golem_assembler: Образователь железных големов
