Translate recipes_tl.yml via GitLocalize

--- a/src/main/resources/languages/recipes_tl.yml
+++ b/src/main/resources/languages/recipes_tl.yml
@@ -71,7 +71,7 @@ slimefun:
     lore:
     - I-craft ang item na ito tulad ng ipinakita
     - gamit ang Ancient Altar.
-    - Hanapin ang Ancient Altar para sa karagdagang Impormasyon.
+    - Hanapin ang Ancient Altar para sa mga karagdagang Impormasyon.
   heated_pressure_chamber:
     name: Heated Pressure Chamber
     lore:
